update study note

--- a/study_note/機器學習基石(上).md
+++ b/study_note/機器學習基石(上).md
@@ -26,7 +26,7 @@ lang: zh-tw & en-us
 - 為何要使用機器學習
     - 以辨識樹為例：比起把辨識樹的規則逐一寫成程式，讓機器透過大量資料來學習如何辨識樹較為簡單
     - <font color='#f00'>機器學習是建構複雜系統的另外一種方式</font>
-- 機器學習的使用局面
+- 機器學習的使用場景
     - 當人類無法編寫複雜的系統：火星機器人
     - 當人類無法簡單地定義規則：語音辨識
     - 當人類無法快速的下決定：股市高頻交易
@@ -64,37 +64,45 @@ lang: zh-tw & en-us
 
 ## Learning to Answer Yes/No
 - 假說集合 $H$
-    - 之前提到我們要從假說集合 $H$
+    - 之前我們提到要從假說集合 $H$ 中挑出一個假說，但卻沒有詳細描述假說集合的數學樣貌，原因在於假說集合可能因問題的類型而有所不同，接下來要介紹一種針對二元分類的假說集合：感知器 (Perceptron)
 - 感知器 (Perceptron)
-    - 一筆資料若有 $d$ 個屬性，則可以把它轉換成 $d$ 維的向量 $x=(x_1, x_2, ..., x_d)$
-    - 感知器為 $d$ 維向量的權重和一閥值之組合，資料與權重兩向量的內積若大於閥值，則觸發(+)，否則不觸發(-)
-    - <font color="#f00">其實感知器就是假說集合 $H$ 中的任一假說 $h$ </font>
-    - 可以透過數學推導把閥值導入權重，如下圖：<center>![pic](https://i.imgur.com/KEqPrpK.png =500x280)</center>
-    - 感知器與資料的內積為一線性組合，所以其在二維是一條直線(在多維則為超平面)，可以將整個空間一分為二 $\Leftrightarrow$ 二元分類器
+    - 一筆資料若有 $d$ 個特徵，則可以把它轉換成 $d$ 維的特徵向量 $x=(x_1, x_2, ..., x_d)$，每個特徵都可以賦予不同的權重代表其對輸出的影響，形成 $d$ 維的權重向量 $w=(w_1, w_2, ..., w_d)$
+    - 當特徵向量與權重向量的內積大於某閥值，輸出為 $+1$ ，否則為 $-1$ ，數學公式如下：$$h(x)=sign((\sum^d_{i=1}w_ix_i)-threshold)$$
+    - 可以透過數學推導把閥值導入權重向量作為 $w_0$ ，並在特徵向量加入 $x_0=1$ ，以方便計算，如下圖：<center>![pic](https://i.imgur.com/KEqPrpK.png =500x280)</center>
+    - <font color="#f00">特徵向量與權重向量的內積為一線性組合，所以特徵向量在二維會是一條直線，在多維則為超平面，可以將整個空間一分為二 $\Leftrightarrow$ 二元分類器</font>
 - Perceptron Learning Algorithm (PLA)
-    - 我們需要從假說集合 $H$ 中，找出一個最好的假說，PLA提出先從任一假說出發，再不斷地從錯誤中修正假說
+    - 我們需要從假說集合 $H$ 中，找出一個最好的假說，PLA提出先從任一假說出發，在不斷地從錯誤中修正假說，直到沒有錯誤為止
     - 修正的方法為：$w_{t+1}\gets w_t+y_{n(t)}x_{n(t)}$
-    - PLA的相關議題
-        - 不能停止的話該怎麼辦呢
-        - 既使停下來了，其對訓練資料 $D$ 以外的樣本是否有效呢
+    - ==to be continued==
+- PLA的相關議題
+    - 不能停止的話該怎麼辦
+    - 既使停下來了，其對訓練資料 $D$ 以外的樣本是否有效
 - 線性可分割
-    - 當PLA能夠停止時，則代表有某個感知器在資料空間 $D$ 中不會犯錯，此時 $D$ 是線性可分割的
-- 
-
+    - 當PLA能夠停止時，則代表有某個權重向量 $w$ 在訓練資料 $D$ 中不會犯錯，此時 $D$ 是線性可分割的
+- ==to be continued==
+- Pocket Algorithm
+    - 當訓練資料 $D$ 不是線性可分割的時候，我們便假定訓練樣本中是有雜訊(noise)，並不再要求所有的訓練資料都分類正確，只希望能求得一權重向量能做出最少個錯誤的分類，但這是一個NP-hard的問題
+    - 在基於PLA的架構下，Pocket Algorithm會記住一個權重向量 $\hat{w}$，在不斷地從錯誤中修正權重向量的同時，$w_{t+1}$ 需要跟 $\hat{w}$ 比較分類的正確率，若 $w_{t+1}$ 有更高的正確率，則更新 $\hat{w}$ 為 $w_{t+1}$ ，直到足夠的迭代次數
 
 ## Types of Learning
-- 二元分類問題
-    - 許多理論的推導、演算法都是從二元分類問題出發
-- 多元分類問題
-    - 輸出不再只有兩種可能，可以有 $k$ 種：$y=\lbrace 1, 2, ..., K\rbrace$
-    - 多元分類問題有許多實際的應用，尤其是在視覺辨識、影像辨識
-- 迴歸分析
-    - 迴歸分析中，輸出的範圍是整個實數：$y=\mathbb{R}$
-    - 迴歸分析在統計學的領域中被已有相當多的，所以其在統計中的工具也經常使用於機器學習
-- 結構學習
-    - 結構學習的輸入和輸出都是帶有結構的
-    - 相關應用：蛋白質折疊、演講解析樹
--
+- 不同輸出類型的學習問題
+    - 二元分類問題：輸出的空間是二元的，而許多理論的推導、演算法都是從二元分類問題出發
+    - 多元分類問題：輸出不再只有兩種可能，可以有 $k$ 種：$y=\lbrace 1, 2, ..., K\rbrace$ ，而多元分類問題有許多實際的應用，尤其是在辨識方面的領域
+    - 迴歸分析：輸出的範圍是整個實數：$y=\mathbb{R}$ ，而迴歸分析在統計學的領域中被已有相當多的，所以其在統計中的工具也經常使用於機器學習
+    - 結構學習：結構學習的輸入和輸出都是帶有結構的，例如：資料輸入一段中文句子，機器輸出這段句子的英文翻譯
+- 不同標記類型的學習問題
+    - 監督式學習：每一筆資料 $x_n$ 都有對應的標記 $y_n$
+    - 非監督式學習：每一筆資料 $x_n$ 不再有對應的標記，機器必須對輸入的資料進行分類或分群
+    - 半監督式學習：資料空間中的部分資料有標記，另一部份是沒有標記的，這樣的情況通常來自於資料標記的成本是昂貴的，例如：藥物測試
+    - 強化學習：根據機器在環境中的行為給予獎勵或懲罰，機器在根據這些回饋修正自身行為，使機器能夠有最好的表現
+- 不同溝通方式的學習問題
+    - 批量學習：將資料一整批的送給機器去學習，希望機器的表現能夠很好，此為最常見的方式
+    - 線上學習：將資料一個一個有序列地送給機器去學習，希望機器的表現能夠越變越好
+    - 主動學習：機器主動地對不清楚的資料提出問題，這種學習方法通常應用在資料標記成本相當昂貴的情況下
+- 不同輸入類型的學習問題
+    - 具體特徵：特徵的表現經過人類知識的預先處理，而具體特徵對機器來說是最容易理解和使用的，例如：分類硬幣時，硬幣的尺寸和重量
+    - 原始特徵：特徵的表現較為原始，通常需要人類或機器把特徵具體化，例如：數字辨識時，人類的手稿
+    - 抽象特徵：特徵的表現是抽象且沒有實際物理意義的，通常需要人類或機器把特徵轉換、提取、組織，例如：預測顧客的願望清單時，該顧客的ID和曾經購買過的商品ID
 
 ## Feasibility of Learning
 ## Training versus Testing
