--- a/study_note/機器學習基石(上).md
+++ b/study_note/機器學習基石(上).md
@@ -19,7 +19,7 @@ lang: zh-tw & en-us
 
 
 ## The Learning Problem
-- 學習
+- 什麼是學習
     - 人類學習：透過大量觀察累積之經驗來學習技能
     - 機器學習：透過大量資料累積、計算之經驗來學習技能
     - 技能：增進某一績效指標
@@ -45,7 +45,7 @@ lang: zh-tw & en-us
     - 假說集合：$H$
     - 學習之演算法：$A$
     - 假說集合 $H$ 包含各種假說，由演算法 $A$ 來挑出一個假說 $g$
-    - 機器學習的實際定義：<font color="#f00">使用資料來計算出假說 $g$，而其非常接近目標函數 $f$</font>
+    - 機器學習的實際定義：<font color="#f00">使用資料 $D$ 來計算出假說 $g$，而其非常接近目標函數 $f$</font>
 :::success
 - 銀行核發信用卡之舉例
     - 銀行需要判斷使否要發信用卡給某一個顧客，而該銀行有著過去其他顧客核發信用卡的歷史資料，這個歷史資料記錄著顧客的工作或財務狀況，例如：年收入、負債、工作年資...，以及核發信用卡這個決定是否正確
@@ -62,7 +62,7 @@ lang: zh-tw & en-us
     - 統計學：使用資料來推論未知特徵
     - 以最終假說作為推論結果、目標函數作為未知特徵，則可以透過統計方法實現機器學習
 
-## Learning to Answer Yes/No
+## ==Learning to Answer Yes/No==
 - 假說集合 $H$
     - 之前我們提到要從假說集合 $H$ 中挑出一個假說，但卻沒有詳細描述假說集合的數學樣貌，原因在於假說集合可能因問題的類型而有所不同，接下來要介紹一種針對二元分類的假說集合：感知器 (Perceptron)
 - 感知器 (Perceptron)
@@ -76,12 +76,12 @@ lang: zh-tw & en-us
     - ==to be continued==
 - PLA的相關議題
     - 不能停止的話該怎麼辦
-    - 既使停下來了，其對訓練資料 $D$ 以外的樣本是否有效
+    - 既使停下來了，其對資料 $D$ 以外的其他資料是否有效
 - 線性可分割
-    - 當PLA能夠停止時，則代表有某個權重向量 $w$ 在訓練資料 $D$ 中不會犯錯，此時 $D$ 是線性可分割的
+    - 當PLA能夠停止時，則代表有某個權重向量 $w$ 在資料 $D$ 中不會犯錯，此時 $D$ 是線性可分割的
 - ==to be continued==
 - Pocket Algorithm
-    - 當訓練資料 $D$ 不是線性可分割的時候，我們便假定訓練樣本中是有雜訊(noise)，並不再要求所有的訓練資料都分類正確，只希望能求得一權重向量能做出最少個錯誤的分類，但這是一個NP-hard的問題
+    - 當資料 $D$ 不是線性可分割的時候，我們便假定資料中是有雜訊(noise)，並不再要求所有的資料都分類正確，只希望能求得一權重向量能做出最少個錯誤的分類，但這是一個NP-hard的問題
     - 在基於PLA的架構下，Pocket Algorithm會記住一個權重向量 $\hat{w}$，在不斷地從錯誤中修正權重向量的同時，$w_{t+1}$ 需要跟 $\hat{w}$ 比較分類的正確率，若 $w_{t+1}$ 有更高的正確率，則更新 $\hat{w}$ 為 $w_{t+1}$ ，直到足夠的迭代次數
 
 ## Types of Learning
@@ -105,6 +105,18 @@ lang: zh-tw & en-us
     - 抽象特徵：特徵的表現是抽象且沒有實際物理意義的，通常需要人類或機器把特徵轉換、提取、組織，例如：預測顧客的願望清單時，該顧客的ID和曾經購買過的商品ID
 
 ## Feasibility of Learning
+- No Free Lunch
+    - 在之前的機器學習模型中，我們希望使用資料 $D$ 來計算出假說 $g$，而其會非常接近目標函數 $f$，但這樣的情形下，只能確定假說 $g$ 在資料 $D$ 以內表現的很好，<font color="#f00">並不能保證假說 $g$ 在資料 $D$ 以外也可以表現的很好，然而，這其實才是我們希望機器能做到的，所以我們需要一些假設條件</font>
+:::info
+- 抽樣問題：
+    - 罐子裡有許多綠色和橘色的彈珠，如果想要知道橘色彈珠在罐子裡的比例，統計學的方法是從罐子裡抽一把彈珠，從抽出來的橘色彈珠比例去推論罐子裡橘色彈珠的比例![](https://i.imgur.com/c1MyX6s.png)
+    - Hoeffding's inequality $$P[|v-u|>\epsilon]\leq2exp(-2\epsilon ^2N)$$
+    - 我們希望透過已知 $\nu$ 來推論未知 $\mu$，藉由Hoeffding's inequality可以得知，只要樣本數量 $N$ 夠大，則 $\nu\approx\mu$，而這樣的推論是<font color="#f00">probably approximately correct(PAC)</font>
+:::
+- PAC與學習
+
+- PAC與機器學習
+
 ## Training versus Testing
 ## Theory of Generalization
 ## The VC Dimension
